--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://anoop-varghese.github.io/carols",
+  "homepage": "https://anoop-varghese.github.io/",
   "name": "carols",
   "version": "0.1.0",
   "private": true,
